tests/snapshots/snapshot_tests__cli_doctor_check_output.snap
---
source: tests/snapshot_tests.rs
expression: "serde_json::json!({\n    \"success\":\n    parsed.get(\"success\").and_then(|v| v.as_bool()).unwrap_or(false),\n    \"checks_count\":\n    parsed.get(\"checks\").and_then(|v|\n    v.as_array()).map(|a| a.len()).unwrap_or(0),\n})"
---
{
  "checks_count": 0,
  "success": true
}
