tests/snapshots/snapshot_tests__cli_state_list_output.snap
---
source: tests/snapshot_tests.rs
expression: "serde_json::json!({\n    \"success\":\n    parsed.get(\"success\").and_then(|v| v.as_bool()).unwrap_or(false),\n    \"docs_count\":\n    parsed.get(\"docs\").and_then(|v|\n    v.as_array()).map(|a| a.len()).unwrap_or(0),\n})"
---
{
  "docs_count": 0,
  "success": true
}
